# renodx

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Documents.lnk  LICENSE  README.md  build.cmd  embed.cmake  embedfile.c  embedfile.cpp  make-sln.cmd  notes.md  renodx-metadata-schema.json
.agents/skills/: AGENTS.md  README.md
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: renodx-code-review.instructions.md
.github/workflows/: auto-merge-hlsl.yml  clang-tidy-review.yml  clang-x64.yml  clang-x86.yml  clang.yml  cmake-clang.yml  cmake-ninja.yml  cmake-visual-studio.yml  cmake-windows.yml  nightly.yml  ninja-x64.yml  ninja-x86.yml  ninja.yml  snapshot.yml  visual-studio-x64.yml  visual-studio-x86.yml  visual-studio.yml
docs/: CONTRIBUTING.md  DEVKIT_MCP.md
embed/: 0x71F27445.cso  0x97CA5A85.cso
lib/: crc32_hash.hpp
scripts/: deploy-early-access.cmd  deploy-early-access.ps1  generate-release-manifest.mjs  helper-module.psm1  setup-dev-env.ps1
src/: analyze_hlsl_deps.cpp  analyze_shader_deps.cpp  cp2077-mod.cpp  embed_file.cpp
src/batman-arkhamknight/: addon.cpp  final00_0x2C2D0899.ps_5_0.hlsl  final01_0x5DAD9473.ps_5_0.hlsl  final02_0x311E0BDA.ps_5_0.hlsl  final03_0x2AC7F89E.ps_5_0.hlsl  final04_0x7527C8AD.ps_5_0.hlsl  final05_0xF3B4727D.ps_5_0.hlsl  final06_0x8D4B625A.ps_5_0.hlsl  final07_0xBD36EC09.ps_5_0.hlsl  final08_0x420BA351.ps_5_0.hlsl  final09_0xFE8B44FC.ps_5_0.hlsl  final10_0xB4B3061C.ps_5_0.hlsl  final11_0xDB56A8CA.ps_5_0.hlsl  final12_0x45741188.ps_5_0.hlsl  final13_0x8CBD2352.ps_5_0.hlsl  output_0x067FF80F.ps_5_0.hlsl  shared.h  tonemapper.hlsl  tonemapper00_0x978BFB09.cs_5_0.hlsl  tonemapper01_0xB6B56605.cs_5_0.hlsl  tonemapper02_0xF01CCC7E.cs_5_0.hlsl  tonemapper03_0x3A4E0B90.cs_5_0.hlsl  video_0x12200F17.ps_5_0.hlsl
src/batmanak/: addon.cpp  final01_0x5DAD9473.ps_5_0.hlsl  final03_0x2AC7F89E.ps_5_0.hlsl  final06_0x8D4B625A.ps_5_0.hlsl  final09_0xFE8B44FC.ps_5_0.hlsl  final10_0xB4B3061C.ps_5_0.hlsl  final11_0xDB56A8CA.ps_5_0.hlsl  final12_0x45741188.ps_5_0.hlsl  final13_0x8CBD2352.ps_5_0.hlsl  shared.h  tonemapper.hlsl  tonemapper00_0x978BFB09.cs_5_0.hlsl  unknown01_0xD6A846C8.ps_5_0.hlsl  unknown02_0x0C142BB2.ps_5_0.hlsl  unknown03_0x8F20CC31.ps_5_0.hlsl  unknown04_0x931FF3DD.ps_5_0.hlsl  unknown05_0x93793FBB.ps_5_0.hlsl  unknown06_0xC6D12ACD.ps_5_0.hlsl  unknown07_0xCD1E0E4C.ps_5_0.hlsl  unknown08_0xDB45CCFE.ps_5_0.hlsl  video_0x12200F17.ps_5_0.hlsl
src/common/: DICE.hlsl  Open_DRT.hlsl  RenoDRT.hlsl  RenoDXHelper.addonfx  RenoDXHelper.fx  ShortFuseACES.fx  ShortFuseFilmGrain.fx  aces.hlsl  color.hlsl  colorgrade.hlsl  filmgrain.hlsl  format.hpp  graph.hlsl  lut.hlsl  mods.hpp  random.hlsl  shaderReplaceMod.hpp  swapChainUpgradeMod.hpp  tonemap.hlsl  unity.hlsl  userSettingUtil.hpp
src/cp2077/: aces_cdpr.hlsl  addon.cpp  colormath.hlsl  composite.hlsl  composite_0x5DF649A9.ps_6_0.hlsl  composite_lowbit_0xA61F2FEE.ps_6_0.hlsl  cp2077.h  film_grain_gen_0xD2BBEBD9.cs_6_0.hlsl  film_grain_overlay_0xC783FBA1.cs_6_0.hlsl  hud_0xC83E64DF.cs_6_0.hlsl  menu_0xDE517511.cs_6_0.hlsl  output_0xCBFFC2A3.ps_6_0.hlsl  render_composite_0x439442E3.ps_6_0.hlsl  skyexposure_0xF3F077EA.ps_6_0.hlsl  skymask_0x1C0F46FD.ps_6_0.hlsl  struct.h  tonemapper.hlsl  tonemapper_0x71F27445.cs_6_0.hlsl  tonemapper_sdr_0x61DBBA5C.cs_6_0.hlsl  upscaler_0x341CEB87.cs_6_0.hlsl
src/decompiler/: cli.cpp  dxdisasm.hpp
src/deusexmd/: 01_final_0x7FF6EC9E.ps_5_0.hlsl  02_ui_0xE3DF9B3A.ps_5_0.hlsl  03_filmgrain_0x11044178.ps_5_0.hlsl  05_sharpen_0xDA65F8ED.ps_5_0.hlsl  08_dofbuilder_0x2FBF8291.cs_5_0.hlsl  10_lensflare_0x48BDD659.ps_5_0.hlsl  11_bloomexp_0xAC144B8D.ps_5_0.hlsl  addon.cpp  final00_0x65B04AE5.ps_4_0.hlsl  final01_0x7FF6EC9E.ps_4_0.hlsl  final02_0xE3DF9B3A.ps_4_0.hlsl  shared.h  tonemapper_0x84EF14ED.cs_5_0.hlsl  unknown00_0x0CBE2A90.ps_4_0.hlsl
src/devkit/: addon.cpp
src/dxmd/: 01_final_0x7FF6EC9E.ps_5_0.hlsl  03_filmgrain_0x11044178.ps_5_0.hlsl  06_temporalaa_off_0x00E2BDB5.ps_5_0.hlsl  addon.cpp  shared.h
src/dyinglight2/: addon.cpp  shared.h  tonemapper_0xA7F77A42.ps_5_0.hlsl
src/fallout4/: 00_cursor_0x72826F5B.ps_5_0.hlsl  00_uiopaque_0x21C1F78D.ps_5_0.hlsl  01_uialpha_0xB14DB0F4.ps_5_0.hlsl  09_videos_0x0F2CC0D1.ps_5_0.hlsl  10_renderselect_0x8F009507.ps_5_0.hlsl  11_dof2_0x5E75012A.hlsl  11_dof3_0xC7AD6297.hlsl  11_luts_0x80802E60.ps_5_0.hlsl  12_luts_0x80802E60.ps_5_0.hlsl  12_vignette_0xB74B05F4.ps_5_0.hlsl  13_tonemap_0x8024E8B5.ps_5_0.hlsl  14_vignette_0xB74B05F4.ps_5_0.hlsl  15_tonemap_0x8024E8B5.ps_5_0.hlsl  addon.cpp  fxaa_0x4FB4DA20.ps_5_0.hlsl  shared.h  taa2_0x61CC29E6.ps_5_0.hlsl  taa_0x8CAC3BD9.ps_5_0.hlsl  xx_0x13EEBAE5.ps_5_0.hlsl  xx_0x153BE4A2.ps_5_0.hlsl  xx_0x261AE7AB.ps_5_0.hlsl  xx_0x33F1B3F8.ps_5_0.hlsl  xx_0x34AEF9A7.ps_5_0.hlsl  xx_0x43E69DB9.ps_5_0.hlsl  xx_0x86EC0382.hlsl  xx_0x8E032125.ps_5_0.hlsl  xx_0xCC4CAE26.ps_5_0.hlsl  xx_0xECFC10A2.ps_5_0.hlsl
src/games/: AGENTS.md
src/hifirush/: addon.cpp  lutbuilder_0xBEB7EB31.ps_5_0.hlsl  output00_0xC3126A03.ps_5_0.hlsl  output01_0xC6FA129B.ps_5_0.hlsl  output02_0x9F3842A8.ps_5_0.hlsl  output03_0x93269875.ps_5_0.hlsl  output05_0x8DAE8683.ps_5_0.hlsl  output06_0x4D868A70.ps_5_0.hlsl  shared.h  tonemapper00_0xF6E7E494.ps_5_0.hlsl  tonemapper01_0xE3729F07.ps_5_0.hlsl
src/horizonfw/: addon.cpp  shared.h
src/lanoire/: 00_colorvideo_0x77E6AD1C.ps_4_0.hlsl  00_uiicons_0xA4621F49.ps_4_0.hlsl  00_video_0x77E6AD1C.ps_4_0.hlsl  01_uialpha_0x231D2C5F.ps_4_0.hlsl  02_bwvideo_0x10A3CFDD.ps_4_0.hlsl  02_uitext_0x7C03A997.ps_4_0.hlsl  03_letterbox_0xA558B81D.ps_4_0.hlsl  04_uitextures_0x496A13D7.ps_4_0.hlsl  05_fxaax3_0xB350D2FF.ps_4_0.hlsl  06_composite_0xE45962D5.ps_4_0.hlsl  07_color_0x5C27CB17.ps_4_0.hlsl  99_clear_0x156045DD.ps_4_0.hlsl  addon.cpp  shared.h
src/lostplanet/: addon.cpp  final00_0x7EC02107.ps_4_0.hlsl  final01_0xC1C7045A.ps_4_0.hlsl  finalfs_0xB2AD4F48.ps_4_0.hlsl  postprocess08_clamp_0x98F668B5.ps_4_0.hlsl  shared.h
src/mods/: AGENTS.md  shader.hpp  (+5 more)
(+20439 files in other folders)
